--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorAccent">#FF4081</color>
     <color name="white">#ffffff</color>
-    <color name="color_6bc196">#6bc196</color>
+    <color name="color_6bc196">@color/black</color>
     <color name="transparent">#00000000</color>
     <color name="black_20_transparent">#55000000</color>
 
